# nanogpt-from-scratch

./: .gitignore  Makefile  NOTES.md  README.md  pyproject.toml
lessons/: 00-roadmap.md  01-tokenization-and-data.md  02-bigram-baseline.md  03-self-attention.md  04-multi-head-attention.md  05-transformer-block.md  06-full-gpt-and-training.md  README.md
lessons/code/: 01_tokenization_and_data.py  02_bigram_baseline.py  03_self_attention.py  04_multi_head_attention.py  05_transformer_block.py  06_full_gpt_and_training.py  common.py
viewer/: app.py
viewer/static/: visual-params-kv.html
